# fastai_plain

./: .gitignore  data.py  dataset.py  fast_ai.py  model.py  plain_pytorch.py  pyproject.toml
